RESOLVED FIXED301933
[libpas] Fix build by properly guarding BENABLE(LIBPAS)
https://bugs.webkit.org/show_bug.cgi?id=301933
Summary [libpas] Fix build by properly guarding BENABLE(LIBPAS)
Marcus Plutowski
Reported 2025-11-04 06:39:52 PST
rdar://164009557 In pas_mte_config.h, currently we do: `#if defined(PAS_BMALLOC) && BENABLE(LIBPAS)` but we should actually do ``` #if defined(PAS_BMALLOC) #if BENABLE(LIBPAS) ``` so that the BENABLE(LIBPAS) is only evaluated if we have bmalloc in the build. This is currently breaking libpas tests.
Attachments
Marcus Plutowski
Comment 1 2025-11-04 06:42:53 PST
EWS
Comment 2 2025-11-04 08:48:25 PST
Committed 302545@main (eb706fcd89ff): <https://commits.webkit.org/302545@main> Reviewed commits have been landed. Closing PR #53397 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.