[libpas] Fix guard for BENABLE use in pas_mte_config.h https://bugs.webkit.org/show_bug.cgi?id=301933 rdar://164009557

Reviewed by Dan Hecht.

In pas_mte_config.h, previously we would do:
```
```
but we should actually do
```
```
so that the BENABLE(LIBPAS) is only evaluated if
we have bmalloc in the build.

Canonical link: https://commits.webkit.org/302545@main